# arm-tutorial-rpi

./: .build-all.sh  .gitignore  .markdownlint.yaml  .travis.yml  Dockerfile  LICENSE  build.sh  deploy.sh  readme.md
.github/workflows/: build.yml  markdown-lint.yml
arm001/: build.bat
arm002/: armc-002.c  build.bat
arm003/: armc-003.c  build.bat
arm004/: armc-004.c  build.bat
arm005/: armc-005.c  build.bat
arm006/: build.bat
arm007/: armc-007.c  build.bat  rpi-gpio.h  rpi.x
arm008/: armc-008.c  build.bat
arm009/: armc-009-cstubs.c  armc-009-start.S  build.bat
arm010/: CMakeLists.txt  armc-010.c
arm011/: CMakeLists.txt  armc-011-start.S  armc-011.c  rpi-base.h  rpi-systimer.h
arm011/scripts/: configure.bat  configure.sh
arm012/: CMakeLists.txt  armc-012.c  rpi.x  toolchain-arm-none-eabi.cmake
arm013/: CMakeLists.txt  armc-013-start.S  armc-013.c  readme.md  rpi-armtimer.h  rpi-base.h  rpi-gpio.c  rpi-gpio.h  rpi-interrupts.c  rpi-interrupts.h  rpi-systimer.h
boot/: readme.md
card/: create_card_image.sh  make_card.sh  readme.md  write_card.sh
compiler/: compiler.md5  get_compiler.sh  readme.md
compiler/cmake-toolchains/: toolchain-arm-none-eabi-rpi0.cmake  toolchain-arm-none-eabi-rpi1.cmake  toolchain-arm-none-eabi-rpi1bp.cmake  toolchain-arm-none-eabi-rpi2.cmake  toolchain-arm-none-eabi-rpi3.cmake  toolchain-arm-none-eabi-rpi3bp.cmake  toolchain-arm-none-eabi-rpi4.cmake
firmware/: get_firmware_repo.sh  readme.md
gh-pages/: _config.yml
gh-pages/_posts/: 2013-01-03-step01-bare-metal-programming-in-c-pt1.markdown  2014-02-27-welcome-to-jekyll.markdown
images/: Peek 2020-11-25 10-43.apng
part-1/: readme.md
part-1/armc-00/: armc-00.c  build-rpi-2.bat  build-rpi-2.sh  build.bat  build.sh
part-1/armc-01/: armc-01.c  build-rpi-2.bat  build-rpi-2.sh  build-rpi-bplus.bat  build-rpi-bplus.sh  build.bat  build.sh
part-1/armc-02/: armc-02.c  build-rpi-2.bat  build-rpi-2.sh  build-rpi-bplus.bat  build-rpi-bplus.sh  build.bat  build.sh
part-1/armc-03/: armc-03.c  build-rpi-2.bat  build-rpi-2.sh  build-rpi-bplus.bat  build-rpi-bplus.sh  build.bat  build.sh  make_card.sh
part-1/armc-03/bin-rpi/: kernel.img
part-1/armc-03/bin-rpi-2/: kernel.img
part-1/armc-03/bin-rpi-bplus/: kernel.img
part-2/: readme.md
part-2/armc-04/: armc-04.c  build-rpi-2.bat  build-rpi-2.sh  build-rpi-bplus.bat  build-rpi-bplus.sh  build.bat  build.sh  disassemble.sh  make_card.sh
part-2/armc-05/: armc-05.c  build-rpi-2.bat  build-rpi-2.sh  build-rpi-bplus.bat  build-rpi-bplus.sh  build.bat  build.sh
part-2/armc-06/: armc-06.c  build-rpi-2.bat  build-rpi-2.sh  build-rpi-bplus.bat  build-rpi-bplus.sh  build.bat  build.sh  disassemble.sh  rpi-gpio.h  rpi.x
part-2/armc-07/: armc-07.c  build-rpi-2.bat  build-rpi-2.sh  build-rpi-bplus.bat  build-rpi-bplus.sh  build.bat  build.sh  rpi-gpio.h  rpi.x
part-2/armc-08/: armc-08-start.S  armc-08.c  build-rpi-2.bat  build-rpi-2.sh  build-rpi-bplus.bat  build-rpi-bplus.sh  build.bat  build.sh  disassemble.bat  kernel.elf  kernel.img
part-2/armc-09/: armc-09-cstartup.c  armc-09-cstubs.c  armc-09-start.S  armc-09.c  build-rpi-2.bat  build-rpi-2.sh  build-rpi-bplus.bat  build-rpi-bplus.sh  build.bat  build.sh  disassemble.sh  rpi-gpio.h  rpi.x
part-3/: readme.md
part-3/arm010/: CMakeLists.txt  armc-010-cstartup.c  armc-010-cstubs.c  armc-010-start.S  armc-010.c  build.sh  rpi-gpio.h  toolchain-arm-none-eabi-rpi.cmake
part-3/arm011/: CMakeLists.txt  armc-011-cstubs.c  armc-011-start.S  armc-011.c  rpi-gpio.h  rpi-systimer.h
part-3/arm012/: CMakeLists.txt  armc-012.c
part-3/armc-010/: CMakeLists.txt  armc-010-cstubs.c  build.sh  toolchain-arm-none-eabi-rpi2.cmake  toolchain-arm-none-eabi-rpi3.cmake  toolchain-arm-none-eabi-rpibplus.cmake
part-3/armc-011/: CMakeLists.txt  build.sh  rpi-base.h  rpi-systimer.h  toolchain-arm-none-eabi-rpi.cmake  toolchain-arm-none-eabi-rpi3.cmake  toolchain-arm-none-eabi-rpi3bp.cmake
part-3/armc-012/: CMakeLists.txt  armc-012-start.S  armc-012.c  rpi-gpio.h  rpi-systimer.c  toolchain-arm-none-eabi-rpi.cmake  toolchain-arm-none-eabi-rpi0.cmake  toolchain-arm-none-eabi-rpi1bp.cmake  toolchain-arm-none-eabi-rpi3.cmake  toolchain-arm-none-eabi-rpi3bp.cmake  toolchain-arm-none-eabi-rpi4.cmake  toolchain-arm-none-eabi-rpibplus.cmake
part-4/: readme.md
part-4/armc-013/: CMakeLists.txt  armc-013-cstubs.c  armc-013-start.S  armc-013.c  build.sh  gic-400.h  readme.md  rpi-armtimer.h  rpi-base.h  rpi-gpio.c  rpi-gpio.h  rpi-interrupts-controller.c  rpi-interrupts.c  rpi-interrupts.h  rpi-systimer.h  toolchain-arm-none-eabi-rpi0.cmake  toolchain-arm-none-eabi-rpi2.cmake  toolchain-arm-none-eabi-rpi3.cmake  toolchain-arm-none-eabi-rpi3bp.cmake  toolchain-arm-none-eabi-rpi4.cmake
part-4/armc-013/scripts/: configure_rpi.sh
part-5/: readme.md
part-5/armc-014/: CMakeLists.txt  armc-014.c  armc-cstubs.c  armc-start.S  rpi-armtimer.c  rpi-aux.c  rpi-aux.h  rpi-base.h  rpi-gpio.h  rpi-interrupts.c  rpi-interrupts.h  rpi-mailbox-interface.c  rpi-mailbox-interface.h  toolchain-arm-none-eabi-rpi2.cmake
part-5/armc-015/: CMakeLists.txt  armc-015.c  armc-start.S  rpi-armtimer.h  rpi-aux.c  rpi-base.h  rpi-gpio.c  rpi-gpio.h  rpi-interrupts-new.c  rpi-interrupts.c  rpi-mailbox-interface.c  rpi-mailbox-interface.h  rpi-mailbox.c
part-5/armc-015/scripts/: configure_rpi2.sh
part-5/armc-016/: CMakeLists.txt  armc-016.c  armc-start.S  gic-400.c  rpi-armtimer.c  rpi-gpio.c  rpi-gpio.h  rpi-interrupts-controller.c  rpi-interrupts.c  rpi-interrupts.h  rpi-mailbox.h
part-5/armc-017/: CMakeLists.txt  armc-017.c  armc-cstartup.c  armc-cstubs.c  armc-start.S  build.sh  create-random-stars.py  effects-sinewave.c  effects.h  gimp-image.h  image-font.c  image-font.h  image.c  image.h  rpi-aux.c  rpi-framebuffer.c  rpi-framebuffer.h  rpi-gpio.h  rpi-mailbox-interface.c  rpi-mailbox-interface.h  rpi-mailbox.c  rpi-mailbox.h  rpi-systimer.c  rpi-systimer.h  sinewave.c  sinewave.h  starfield.c  starfield.h  stars.c  stars.h
part-5/armc-017/fonts/: font09.c  (+1 more)
shell/: common_build.sh  common_functions.sh
(+6 files in other folders)
